@@ -1,5 +1,9 @@
 package ch.ivyteam.ivy.addons.docfactory.aspose;
 
+/**
+ * Enum of all the Aspose products included in the IvyAddOns: aspose Words, Cells, Slides, Pdf.
+ *
+ */
 public enum AsposeProduct {
 	
 	WORDS, CELLS, PDF, SLIDES;
